# vendi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: vendi-python-build-package-dev.yml  vendi-python-release.yaml
examples/: batch_job_llava.py  complete_many_models.py  conversation.jsonl  create_google_provider.py  create_many.py  create_many_prompts.py  datasets.py  delete_deployment.py  deployments.py  finetune.py  inference.py  inference_google.py  inference_on_dataset.py  llava_inference.py  models.py  start_deployment.py  stop_deployment.py  test.py
examples/completions/: batch_job_openai.py  create_many.py  inference.py  llava_inference.py
examples/datasets/: datasets.py
examples/deployments/: delete_deployment.py  deployments.py  start_deployment.py
examples/finetune/: finetune.py  models.py
examples/instrument/: workflow.py
src/vendi/: __init__.py
src/vendi/completions/: completions.py  schema.py
src/vendi/core/: ahttp_client.py  config.py  http_client.py
src/vendi/datasets/: datasets.py  schema.py
src/vendi/deployments/: deployments.py  schema.py
src/vendi/endpoints/: __init__.py  endpoints.py  schema.py
src/vendi/finetune/: __init__.py  finetune.py  schema.py
src/vendi/models/: __init__.py  models.py  schema.py
src/vendi/observability/: __init__.py  collector.py
src/vendi/prompte_templates/: __init__.py  prompt_templates.py  schema.py
src/vendi/providers/: providers.py  schema.py
src/vendi_sdk/: __init__.py  vendi.py
src/vendi_sdk/completions/: completions.py  schema.py
tests/: conftest.py  test_deployments.py  test_endpoints.py  test_models.py  test_prompt_templates.py  test_providers.py  test_upload_dataset.py
tests/data/: raw.jsonl
(+39 files in other folders)
