[tool.poetry]
name = "vendi"
version = "0.1.22"
description = ""
authors = ["Aviv.a <aviv@vendi-ai.com>"]
packages = [
    { include = "vendi", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.2.3"
requests = "^2.31.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pandas = "*"
aiohttp = "^3.8.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
